# sensors-applet

./: .gitignore  ChangeLog  Makefile.am  SensorsApplet.xml  autogen.sh  configure.ac  org.gnome.applets.SensorsApplet.panel-applet.in.in
debian/: NEWS  TODO  changelog  control  copyright  libsensors-applet-plugin-dev.install  libsensors-applet-plugin0.install  rules  sensors-applet.install  watch
debian/patches/: enable-deprecated.patch  series
help/: Makefile.am
help/C/: index.docbook
lib/: Makefile.am  sensors-applet-plugin.c
plugins/acpi/: Makefile.am  acpi-plugin.c  acpi-plugin.h
plugins/aticonfig/: Makefile.am  aticonfig-plugin.c  aticonfig-plugin.h
plugins/eee/: Makefile.am  eee-plugin.c  eee-plugin.h
plugins/hddtemp/: Makefile.am  hddtemp-plugin.c  hddtemp-plugin.h
plugins/i2c-proc/: Makefile.am  i2c-proc-plugin.c  i2c-proc-plugin.h
plugins/i2c-sys/: Makefile.am  i2c-sys-plugin.c  i2c-sys-plugin.h
plugins/i8k/: Makefile.am  i8k-plugin.c  i8k-plugin.h
plugins/ibm-acpi/: Makefile.am  ibm-acpi-plugin.c  ibm-acpi-plugin.h
plugins/libsensors/: Makefile.am  libsensors-plugin.c  libsensors-plugin.h
plugins/mbmon/: Makefile.am  mbmon-plugin.c  mbmon-plugin.h
plugins/nvidia/: Makefile.am  nvidia-plugin.c  nvidia-plugin.h
plugins/omnibook/: Makefile.am  omnibook-plugin.c  omnibook-plugin.h
plugins/pmu-sys/: Makefile.am  pmu-sys-plugin.c  pmu-sys-plugin.h
plugins/smu-sys/: Makefile.am  smu-sys-plugin.c  smu-sys-plugin.h
plugins/sonypi/: Makefile.am  sonypi-plugin.c  sonypi-plugin.h
plugins/udisks/: Makefile.am  udisks-plugin.c  udisks-plugin.h
po/: .gitignore  POTFILES.in  fr.po
sensors-applet/: .gitignore  Makefile.am  about-dialog.c  about-dialog.h  active-sensor-libnotify.c  active-sensor-libnotify.h  active-sensor.c  active-sensor.h  main.c  org.gnome.sensors-applet.gschema.xml  org.gnome.sensors-applet.gschema.xml.in.in  prefs-dialog.c  prefs-dialog.h  sensor-config-dialog.c  sensor-config-dialog.h  sensors-applet-conf.c  sensors-applet-conf.h  sensors-applet-plugin.h  sensors-applet-plugins.c  sensors-applet-plugins.h  sensors-applet-sensor.h  sensors-applet.c  sensors-applet.h
