# MBMON plugin
plugindir = $(libdir)/sensors-applet/plugins

libmbmon_la_CPPFLAGS = -DGNOMELOCALEDIR=\""$(datadir)/locale/"\" \
	-DG_LOG_DOMAIN=\""Sensors Applet"\" \
	-DPIXMAPS_DIR=\""$(datadir)/pixmaps/$(PACKAGE)/"\" \
	-DDATADIR=\""$(datadir)"\" \
	-DLIBDIR=\""$(libdir)"\" \
        -DSYSCONFDIR=\""$(sysconfdir)"\" \
        -DPREFIX=\""$(prefix)"\" \
	-I$(top_srcdir) \
	$(GLIB_CFLAGS)

plugin_LTLIBRARIES = libmbmon.la

libmbmon_la_SOURCES = \
	mbmon-plugin.h	\
	mbmon-plugin.c

libmbmon_la_LDFLAGS = $(PLUGIN_LIBTOOL_FLAGS) $(GLIB_LIBS)
libmbmon_la_LIBADD = $(top_builddir)/lib/libsensors-applet-plugin.la
